WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117687
[BlackBerry] only notify download client when download error
https://bugs.webkit.org/show_bug.cgi?id=117687
Summary
[BlackBerry] only notify download client when download error
Mary Wu
Reported
2013-06-16 23:32:36 PDT
when met network error in downloading, we notify the error to download client through download stream, we shouldn't notify page client the error.
Attachments
webkit patch
(5.01 KB, patch)
2013-06-17 00:38 PDT
,
Mary Wu
no flags
Details
Formatted Diff
Diff
patch
(2.13 KB, patch)
2013-06-17 00:40 PDT
,
Mary Wu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mary Wu
Comment 1
2013-06-17 00:38:23 PDT
Created
attachment 204798
[details]
webkit patch
Mary Wu
Comment 2
2013-06-17 00:40:13 PDT
Created
attachment 204799
[details]
patch correct patch
Rob Buis
Comment 3
2013-06-17 07:03:17 PDT
Comment on
attachment 204799
[details]
patch LGTM.
Mary Wu
Comment 4
2013-06-18 01:53:19 PDT
Comment on
attachment 204799
[details]
patch thanks, Rob
WebKit Commit Bot
Comment 5
2013-06-18 02:13:34 PDT
Comment on
attachment 204799
[details]
patch Clearing flags on attachment: 204799 Committed
r151677
: <
http://trac.webkit.org/changeset/151677
>
WebKit Commit Bot
Comment 6
2013-06-18 02:13:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug