[BlackBerry] only notify download client when download error https://bugs.webkit.org/show_bug.cgi?id=117687

Reviewed by Rob Buis.

When met network error in downloading, we notify the error to download
client through download stream, we shouldn't notify page client the error.
RIM JIRA 419985

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::shouldNotifyClientFailed):


Canonical link: https://commits.webkit.org/135870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151677 268f45cc-cd09-0410-ab3c-d52691b4dbfc